# amazon-product-analyzer

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  DATA_COLLECTOR_DEEP_DIVE.md  PLANNING.md  README.md  SPEC.md  TASK.md  ZEABUR_DEPLOYMENT.md
backend/: .dockerignore  Dockerfile  Makefile  check_agent_executions.py  docker-compose.simple.yml  docker-compose.yml  pyproject.toml  streamlit_app.py  test_core_system.py  test_websocket.py
backend/app/: __init__.py  cli.py  main.py
backend/app/agents/: __init__.py
backend/app/api/: __init__.py  analysis.py  products.py
backend/app/api/v1/: api.py  product_analysis.py  websocket.py
backend/app/core/: __init__.py  config.py  database.py  redis_client.py  websocket_simple.py
backend/app/core/agents/: __init__.py  base.py  data_collector.py  market_analyzer.py  optimization_advisor.py  supervisor.py
backend/app/core/graph/: __init__.py  state.py  workflow.py
backend/app/core/langgraph/: graph.py
backend/app/core/tools/: __init__.py  competitor_extractor.py  product_parser.py  scraper.py  scraper_config.py
backend/app/models/: __init__.py  analysis.py  base.py  product.py  thread.py
backend/app/schemas/: __init__.py  analysis.py
backend/app/services/: __init__.py  analysis_service.py  database.py
backend/app/utils/: __init__.py  auth.py  scraper.py  validators.py
backend/scripts/: migrate_analysis_schema.py
frontend/: .dockerignore  Dockerfile  README.md  app.py  next.config.ts  package-lock.json  package.json  start.sh  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analysis/[taskId]/: page.tsx
frontend/components/layout/: footer.tsx  header.tsx
frontend/components/ui/: notion-report.tsx
frontend/lib/: providers.tsx  query-client.ts
frontend/services/: api.ts  websocket.ts  websocket_native.ts
frontend/types/: index.ts
