[project]
name = "amazon-product-analyzer"
version = "0.1.0"
description = "AI-powered Amazon product analysis and optimization platform"
requires-python = ">=3.9"
authors = [
    { name = "Amazon Product Analyzer Team" }
]

dependencies = [
    # Web Framework
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",

    # Database
    "sqlalchemy",
    "alembic",
    "aiosqlite",
    "asyncpg",
    "psycopg2-binary",

    # Redis
    "redis",
    "aioredis",

    # AI and LangGraph
    "langchain",
    "langchain-openai",
    "langchain-anthropic",
    "langgraph",
    "openai",
    "anthropic",

    # Web Scraping
    "playwright",
    "beautifulsoup4",
    "requests",
    "httpx",

    # Data Processing
    "pandas",
    "numpy",

    # Async and Concurrency
    "asyncio-throttle",

    # Validation and Utilities
    "email-validator",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",

    # Environment and Configuration
    "python-dotenv",

    # Monitoring and Logging
    "structlog",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    
    # Code Quality
    "black",
    "isort",
    "flake8",
    "mypy",
    
    # Development Tools
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    # Testing
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    
    # Code Quality
    "black",
    "isort",
    "flake8",
    "mypy",
    
    # Development Tools
    "pre-commit",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
